# c-test-demo

./: .gitignore  UTC_to_local_time  UTC_to_local_time.c  ble_result_test  char_to_int_test.c  crontab_test  crontab_test.c  math_test  math_test.c  power_use_all  power_use_all.c  pro_ble_delay_test.c  random_test  random_test.c  sprintf_test  sprintf_test.c  utc_time_test  utc_time_test.c  week_test  week_test.c
HomeKitTestDemo/: qrcode.c  qrcode.h  qrcode_demo  qrcode_demo.c
LeetCode/: CMakeLists.txt
LeetCode/exp1TwoSum/: CMakeLists.txt  README.md  main.c
LeetCode/exp1TwoSum/components/pre_config/: CMakeLists.txt
LeetCode/exp1TwoSum/main/: CMakeLists.txt  main.c
LeetCode/exp1TwoSum/pre_config/: pre_config.h
c-test-demo/: UTC_to_local_time  UTC_to_local_time.c  ble_result_test.c  char_to_int_test  crontab_test  crontab_test.c  dec_to_hex  dec_to_hex.c  do_while_test  do_while_test.c  fac_sned_power  fac_sned_power.c  fw_ver_test  fw_ver_test.c  localAutoNvsTest.c  local_auto_test  local_auto_test.c  logSizeTest  logSizeTest.c  malloc_test  malloc_test.c  power_use_all  pro_ble_delay_test  random_test.c  sprintf_test  sprintf_test.c  strcat_test.c  tow_bytes_test  tow_bytes_test.c  week_test  week_test.c
c-test-demo/bytesTest/: bytesTest  bytesTest.c
c-test-demo/callback_test/: callback_ins.c  callback_test  callback_test.c
c-test-demo/crontab_test_demo/: crontab_test  crontab_test.c  crontab_test2  crontab_test2.c
cmakeTest/: CMakeLists.txt
cmakeTest/exp1/: README.md  (+1 more)
pre_config/: pre_config.c  pre_config.h
shell_test/: hello_world.sh  test.sh
(+18 files in other folders)
